Another Little Changes

--- a/index.html
+++ b/index.html
@@ -167,7 +167,10 @@
                     <div class="blocks__item"></div>
                     <div class="blocks__item"></div>
                 </div>
-                <button class="blocks__show" type="button">More</button>
+                <button class="blocks__show" type="button">
+                    <span class="un-active">More</span>
+                    <span class="active" style="display: none;">Hide</span>
+                </button>
             </div>
         </section>
     </main>
